--- a/FishTagsApp/app/src/main/res/layout/content_parse_file.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_parse_file.xml
@@ -9,17 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="bft.fishtagsapp.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="bft.fishtagsapp.ParseFileActivity"
+    tools:showIn="@layout/activity_parse_file">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Parse File"
-        android:onClick="parseFile"/>
 </RelativeLayout>
