--- a/FishTagsApp/app/src/main/res/layout/content_parse_file.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_parse_file.xml
@@ -12,4 +12,13 @@
     tools:context="bft.fishtagsapp.ParseFileActivity"
     tools:showIn="@layout/activity_parse_file">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/testText"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="77dp"
+        android:enabled="true" />
 </RelativeLayout>
