--- a/FishTagsApp/app/src/main/res/layout/content_main.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_main.xml
@@ -15,5 +15,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello World!"
+        android:id="@+id/textView2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit Linkage"
+        android:id="@+id/editLinkageBtn"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="202dp" />
+
+
 </RelativeLayout>
