--- a/FishTagsApp/app/src/main/res/layout/activity_parse_file.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_parse_file.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="bft.fishtagsapp.ParseFileActivity">
+    tools:context="bft.fishtagsapp.ParseFileActivity"
+    >
+
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:id="@+id/appbarlayout"
+        >
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -21,6 +24,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_parse_file" />
+    <!-- Make everything below the appbar actually below it and not overlapping-->
+    <include layout="@layout/content_parse_file"
+        android:layout_below="@id/appbarlayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </RelativeLayout>
