--- a/FishTagsApp/app/src/main/res/layout/content_parse_file.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_parse_file.xml
@@ -1,24 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:columnCount="3"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="bft.fishtagsapp.ParseFileActivity"
-    tools:showIn="@layout/activity_parse_file">
+    tools:showIn="@layout/activity_parse_file"
+    android:useDefaultMargins="false">
+
+    <!-- Position text areas -->
+    <TextView
+        android:layout_row="0"
+        android:layout_column="0"
+        android:text="Name"/>
+
+    <EditText
+        android:layout_row="0"
+        android:layout_column="2"
+        android:text="Han Solo"
+        android:background="@android:color/transparent"
+        android:cursorVisible="true"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/testText"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="77dp"
-        android:enabled="true" />
-</RelativeLayout>
+        android:layout_row="1"
+        android:layout_column="0"
+        android:text="CountryID"/>
+    <TextView
+        android:layout_row="1"
+        android:layout_column="2"
+        android:id="@+id/CountryID"
+        android:text=""/>
+    <TextView
+        android:layout_row="2"
+        android:layout_column="0"
+        android:text="Tag ID"/>
+    <TextView
+        android:layout_row="2"
+        android:layout_column="2"
+        android:id="@+id/NationalID"
+        android:text=""/>
+</GridLayout>
