--- a/FishTagsApp/app/src/main/res/layout/activity_parse_file.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_parse_file.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="bft.fishtagsapp.ParseFileActivity"
+    tools:context=".ParseFile.ParseFileActivity"
     >
 
 
