--- a/FishTagsApp/app/src/main/res/layout/content_parse_file.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_parse_file.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="bft.fishtagsapp.ParseFileActivity"
+    tools:context=".ParseFile.ParseFileActivity"
     tools:showIn="@layout/activity_parse_file"
     android:useDefaultMargins="false">
 
