--- a/FishTagsApp/app/src/main/res/layout/content_camera.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_camera.xml
@@ -9,17 +9,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="bft.fishtagsapp.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="bft.fishtagsapp.Camera"
+    tools:showIn="@layout/activity_camera">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/MyImage"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/TestField"
+        android:text="Hello"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go To Camera"
-        android:onClick="goToCamera"/>
+
 </RelativeLayout>
