Connected MainActivity to FormActivity so that Main calls Form and Form returns a map of the data back to map so map can route this information to storage. Routing has not been implemented yet. A rough UI for the form has been implemented. TODO: parse all of the data gotten from the form, routing to storage

--- a/FishTagsApp/app/src/main/res/layout/activity_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_form.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ParseFile.ParseFile"
-    >
-
+    tools:context="bft.fishtagsapp.FormActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:id="@+id/appbarlayout"
-        >
+        android:theme="@style/AppTheme.AppBarOverlay">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -24,11 +21,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <!-- Make everything below the appbar actually below it and not overlapping-->
-    <include layout="@layout/content_parse_file"
-        android:layout_below="@id/appbarlayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+    <include layout="@layout/content_form" />
 
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_dialog_email" />
+
+</android.support.design.widget.CoordinatorLayout>
