--- a/FishTagsApp/app/src/main/res/layout/content_testing.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_testing.xml
@@ -9,14 +9,26 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="bft.fishtagsapp.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="bft.fishtagsapp.TestingActivity"
+    tools:showIn="@layout/activity_testing">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        android:id="@+id/textView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        android:id="@+id/textView2" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit Tag Recovery"
-        android:onClick="gotToForm"/>
+        android:text="Go To Camera"
+        android:onClick="goToCamera"/>
 
     <Button
         android:layout_width="wrap_content"
