--- a/FishTagsApp/app/src/main/res/layout/content_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_form.xml
@@ -2,6 +2,7 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/my_grid_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -29,6 +30,7 @@
     <TextView
         android:layout_row="1"
         android:layout_column="0"
+        android:id="@+id/CountryID0"
         android:text="CountryID"/>
 
     <TextView
@@ -40,6 +42,7 @@
     <TextView
         android:layout_row="2"
         android:layout_column="0"
+        android:id="@+id/NationalID0"
         android:text="Tag ID"/>
 
     <TextView
@@ -70,34 +73,39 @@
         android:layout_row="4"
         android:layout_column="2"
         android:id="@+id/location"
+        android:text="41.9981° N, 91.1415° W"
         />
 
 
     <TextView
         android:layout_row="5"
         android:layout_column="0"
+        android:id="@+id/notes0"
         android:text="Notes"
+
         />
 
     <EditText
         android:layout_row="5"
         android:layout_column="2"
-        android:text=""
+        android:id="@+id/notes"
         android:hint="gear used, fish hooked removed (y/n), comments"
+        android:textSize="12sp"
         />
 
     <Button
         android:layout_row="6"
         android:layout_column="0"
         android:id="@+id/PhotoButton"
-        android:text="Take photo of fish"
+        android:text="Take&#10;photo"
+        android:onClick="goToCamera"
         />
 
     <ImageView
         android:layout_row="6"
         android:layout_column="2"
         android:id="@+id/FishPhoto"
-        android:src="@drawable/fish"
+        android:src="@drawable/placeholder"
         />
 
     <Button
@@ -105,6 +113,7 @@
         android:layout_column="1"
         android:id="@+id/submitForm"
         android:text="Submit"
+        android:onClick="submitForm"
         />
 
 </GridLayout>
