--- a/FishTagsApp/app/src/main/res/layout/content_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_form.xml
@@ -16,7 +16,7 @@
     <!-- Position text areas -->
     <TextView
         android:layout_row="0"
-        android:layout_column="0"
+        android:layout_column="1"
         android:text="Name"
         android:layout_gravity="left"/>
 
@@ -24,62 +24,65 @@
         android:layout_row="0"
         android:layout_column="2"
         android:text="Han Solo"
-        android:background="@android:color/transparent"
-        android:cursorVisible="true"/>
+        android:cursorVisible="true"
+        android:inputType="textPersonName"
+        android:layout_width="210dp" />
 
     <TextView
         android:layout_row="1"
-        android:layout_column="0"
+        android:layout_column="1"
         android:id="@+id/CountryID0"
         android:text="CountryID"/>
 
-    <TextView
+    <EditText
         android:layout_row="1"
         android:layout_column="2"
         android:id="@+id/CountryID"
-        android:text=""/>
+        android:text=""
+        android:layout_width="210dp" />
 
     <TextView
         android:layout_row="2"
-        android:layout_column="0"
+        android:layout_column="1"
         android:id="@+id/NationalID0"
         android:text="Tag ID"/>
 
-    <TextView
+    <EditText
         android:layout_row="2"
         android:layout_column="2"
         android:id="@+id/NationalID"
-        android:text=""/>
+        android:text=""
+        android:layout_width="210dp" />
 
     <TextView
         android:layout_row="3"
-        android:layout_column="0"
+        android:layout_column="1"
         android:text="Time"
         />
 
-    <TextView
+    <EditText
         android:layout_row="3"
         android:layout_column="2"
         android:id="@+id/time"
-        />
+        android:layout_width="210dp" />
 
     <TextView
         android:layout_row="4"
-        android:layout_column="0"
+        android:layout_column="1"
         android:text="Location"
         />
 
-    <TextView
+    <EditText
         android:layout_row="4"
         android:layout_column="2"
         android:id="@+id/location"
         android:text="41.9981° N, 91.1415° W"
-        />
+        android:layout_width="210dp" />
 
 
     <TextView
         android:layout_row="5"
-        android:layout_column="0"
+        android:layout_column="1"
         android:id="@+id/notes0"
         android:text="Notes"
 
@@ -93,14 +96,6 @@
         android:textSize="12sp"
         />
 
-    <Button
-        android:layout_row="6"
-        android:layout_column="0"
-        android:id="@+id/PhotoButton"
-        android:text="Take&#10;photo"
-        android:onClick="goToCamera"
-        />
-
     <ImageView
         android:layout_row="6"
         android:layout_column="2"
@@ -110,6 +105,14 @@
 
     <Button
         android:layout_row="7"
+        android:layout_column="2"
+        android:id="@+id/PhotoButton"
+        android:text="Take&#10;photo"
+        android:onClick="goToCamera"
+        />
+
+    <Button
+        android:layout_row="8"
         android:layout_column="1"
         android:id="@+id/submitForm"
         android:text="Submit"
