--- a/FishTagsApp/app/src/main/res/layout/content_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_form.xml
@@ -1,122 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/my_grid_view"
+    android:id="@+id/my_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/highlighted_text_material_dark"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:useDefaultMargins="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="bft.fishtagsapp.FormActivity"
     tools:showIn="@layout/activity_form">
 
-    <!-- Position text areas -->
-    <TextView
-        android:layout_row="0"
-        android:layout_column="1"
-        android:text="Name"
-        android:layout_gravity="left"/>
+    <RelativeLayout
+        android:id="@+id/my_grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <EditText
-        android:layout_row="0"
-        android:layout_column="2"
-        android:text="Han Solo"
-        android:cursorVisible="true"
-        android:inputType="textPersonName"
-        android:layout_width="210dp" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:text="Fish Tag Submission Form"
+            android:textAlignment="center"
+            android:id="@+id/formTitle"
+            android:background="@color/accent_material_light"
+            android:layout_alignParentEnd="true"
+            android:textSize="30dp"
+            android:textColor="@color/abc_primary_text_material_dark"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:layout_row="1"
-        android:layout_column="1"
-        android:id="@+id/CountryID0"
-        android:text="CountryID"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:id="@+id/Name0"
+            android:layout_marginStart="10dp"
+            android:layout_below="@+id/formTitle"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="15dp"/>
 
-    <EditText
-        android:layout_row="1"
-        android:layout_column="2"
-        android:id="@+id/CountryID"
-        android:text=""
-        android:layout_width="210dp" />
+        <EditText
+            android:id="@+id/Name"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:cursorVisible="false"
+            android:text="Han Solo"
+            android:textSize="20dp"
+            android:layout_below="@+id/formTitle"
+            android:layout_alignBaseline="@+id/Name0"
+            android:layout_toRightOf="@+id/Name0"
+            android:layout_marginStart="60dp"
+            android:textAlignment="center" />
 
-    <TextView
-        android:layout_row="2"
-        android:layout_column="1"
-        android:id="@+id/NationalID0"
-        android:text="Tag ID"/>
+        <TextView
+            android:id="@+id/CountryID0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CountryID"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:layout_below="@+id/Name0"
+            android:layout_alignStart="@+id/Name0"
+            android:layout_marginTop="15dp"/>
 
-    <EditText
-        android:layout_row="2"
-        android:layout_column="2"
-        android:id="@+id/NationalID"
-        android:text=""
-        android:layout_width="210dp" />
+        <EditText
+            android:id="@+id/CountryID"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_below="@+id/Name"
+            android:layout_alignStart="@+id/Name"
+            android:layout_alignBaseline="@+id/CountryID0" />
 
-    <TextView
-        android:layout_row="3"
-        android:layout_column="1"
-        android:text="Time"
-        />
+        <TextView
+            android:id="@+id/NationalID0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tag ID"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:layout_below="@+id/CountryID0"
+            android:layout_alignStart="@+id/CountryID0"
+            android:layout_marginTop="15dp"/>
 
-    <EditText
-        android:layout_row="3"
-        android:layout_column="2"
-        android:id="@+id/time"
-        android:layout_width="210dp" />
+        <EditText
+            android:id="@+id/NationalID"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_below="@+id/CountryID"
+            android:layout_alignStart="@+id/CountryID"
+            android:layout_alignBaseline="@+id/NationalID0"/>
 
-    <TextView
-        android:layout_row="4"
-        android:layout_column="1"
-        android:text="Location"
-        />
+        <TextView
+            android:id="@+id/Time0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:layout_below="@+id/NationalID0"
+            android:layout_alignStart="@+id/NationalID0"
+            android:layout_marginTop="15dp" />
 
-    <EditText
-        android:layout_row="4"
-        android:layout_column="2"
-        android:id="@+id/location"
-        android:text="41.9981° N, 91.1415° W"
-        android:layout_width="210dp" />
+        <EditText
+            android:id="@+id/Time"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/NationalID"
+            android:layout_alignStart="@+id/NationalID"
+            android:layout_alignBaseline="@+id/Time0"/>
+
+        <TextView
+            android:id="@+id/Location0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Location"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:layout_below="@+id/Time0"
+            android:layout_alignStart="@+id/Time0"
+            android:layout_marginTop="15dp"/>
+
+        <EditText
+            android:id="@+id/Location"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="41.9981° N, 91.1415° W"
+            android:textSize="16dp"
+            android:layout_below="@+id/Time"
+            android:layout_alignStart="@+id/Time"
+            android:layout_alignBaseline="@+id/Location0" />
 
 
-    <TextView
-        android:layout_row="5"
-        android:layout_column="1"
-        android:id="@+id/notes0"
-        android:text="Notes"
+        <TextView
+            android:id="@+id/Notes0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Notes"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:layout_below="@+id/Location0"
+            android:layout_alignStart="@+id/Location0"
+            android:layout_marginTop="15dp"/>
 
-        />
+        <EditText
+            android:id="@+id/Notes"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="gear used, fish hooked removed (y/n), comments"
+            android:textSize="12dp"
+            android:layout_below="@+id/Location"
+            android:layout_alignStart="@+id/Location"
+            android:layout_alignBaseline="@+id/Notes0"/>
 
-    <EditText
-        android:layout_row="5"
-        android:layout_column="2"
-        android:id="@+id/notes"
-        android:hint="gear used, fish hooked removed (y/n), comments"
-        android:textSize="12sp"
-        />
+        <TextView
+            android:id="@+id/FishPhoto0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Photo"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:layout_below="@+id/Notes0"
+            android:layout_alignStart="@+id/Notes0"
+            android:layout_marginTop="15dp"/>
 
-    <ImageView
-        android:layout_row="6"
-        android:layout_column="2"
-        android:id="@+id/FishPhoto"
-        android:src="@drawable/placeholder"
-        />
+        <ImageView
+            android:id="@+id/FishPhoto"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/placeholder"
+            android:layout_alignTop="@+id/PhotoButton"
+            android:layout_alignEnd="@+id/Notes" />
 
-    <Button
-        android:layout_row="7"
-        android:layout_column="2"
-        android:id="@+id/PhotoButton"
-        android:text="Take&#10;photo"
-        android:onClick="goToCamera"
-        />
+        <Button
+            android:id="@+id/PhotoButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="goToCamera"
+            android:text="Take Photo"
+            android:layout_below="@+id/Notes0"
+            android:layout_toStartOf="@+id/FishPhoto"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="15dp"/>
 
-    <Button
-        android:layout_row="8"
-        android:layout_column="1"
-        android:id="@+id/submitForm"
-        android:text="Submit"
-        android:onClick="submitForm"
-        />
+        <Button
+            android:id="@+id/SubmitForm"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:onClick="submitForm"
+            android:text="Submit"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:layout_below="@+id/FishPhoto"
+            android:layout_marginTop="15dp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/abc_primary_text_material_dark"
+            android:background="@color/accent_material_light" />
 
-</GridLayout>
+    </RelativeLayout>
+</ScrollView>
