Renamed grivview to rel layout to reflect new layout

--- a/FishTagsApp/app/src/main/res/layout/content_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_form.xml
@@ -16,7 +16,7 @@
     tools:showIn="@layout/activity_form">
 
     <RelativeLayout
-        android:id="@+id/my_grid_view"
+        android:id="@+id/my_rel_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
