--- a/FishTagsApp/app/src/main/res/layout/content_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_form.xml
@@ -27,10 +27,10 @@
             android:text="Fish Tag Submission Form"
             android:textAlignment="center"
             android:id="@+id/formTitle"
-            android:background="@color/accent_material_light"
+            android:background="@color/seaColor"
             android:layout_alignParentEnd="true"
             android:textSize="30dp"
-            android:textColor="@color/abc_primary_text_material_dark"
+            android:textColor="@color/whiteColor"
             android:textStyle="bold"/>
 
         <TextView
@@ -185,10 +185,13 @@
             android:layout_height="wrap_content"
             android:onClick="goToCamera"
             android:text="Take Photo"
-            android:layout_below="@+id/Notes0"
-            android:layout_toStartOf="@+id/FishPhoto"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="15dp"/>
+            android:textColor="@color/whiteColor"
+            android:background="@color/seaColor"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_below="@+id/Notes"
+            android:layout_centerHorizontal="true" />
 
         <Button
             android:id="@+id/SubmitForm"
@@ -201,8 +204,8 @@
             android:layout_below="@+id/FishPhoto"
             android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true"
-            android:textColor="@color/abc_primary_text_material_dark"
-            android:background="@color/accent_material_light" />
+            android:textColor="@color/whiteColor"
+            android:background="@color/seaColor" />
 
     </RelativeLayout>
 </ScrollView>
