--- a/FishTagsApp/app/src/main/res/values/colors.xml
+++ b/FishTagsApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="seaColor">@color/accent_material_light</color>
+    <color name="whiteColor">@color/abc_primary_text_material_dark</color>
 </resources>
