--- a/FishTagsApp/app/src/main/res/layout/content_main.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_main.xml
@@ -17,12 +17,22 @@
         android:layout_height="wrap_content"
         android:text="Submit Tag Recovery"
         android:onClick="goToForm"
-        android:id="@+id/button" />
+        android:id="@+id/formBtn" />
 
     <Button
+        android:id="@+id/scoreBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Scoreboard"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/formBtn"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/signUpBtn"
+        android:layout_below="@+id/scoreBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign Up"
+        android:onClick="signUp"
+        />
 </RelativeLayout>
