--- a/FishTagsApp/app/src/main/res/layout/content_main.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_main.xml
@@ -17,12 +17,18 @@
         android:layout_height="wrap_content"
         android:text="Submit Tag Recovery"
         android:onClick="goToForm"
-        android:id="@+id/button" />
+        android:id="@+id/button"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:textStyle="bold"
+        android:typeface="serif" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Scoreboard"
         android:layout_below="@+id/button"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp" />
 </RelativeLayout>
