Fixed functionality in Storage due to its staticness now. Tried some UI themes, those are not working yet. All Toolbars and PopUpOverlay themes have been commented out. To re-enable, must also define PopupOverlay style. App works, still hardcoded. Problem: If use does not submit photo, the app crashes. Must fix

--- a/FishTagsApp/app/src/main/res/layout/activity_linkage.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_linkage.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="bft.fishtagsapp.editlinkage.LinkageActivity">
+    tools:context="bft.fishtagsapp.Linkage.LinkageActivity">
 
     <include layout="@layout/content_linkage" />
 
