Worked on the UI, added in a toolbar and a logo, a color scheme, all of which could be, and need to be changed. Also needs to integrate Jamie's code with other fields from login and stuff like that. TODO: inlude help and settings in toolbar overflow, design a logo, keep improving the UI. Tested once on Samsung, needs to be tested much more thoroughly, and compatibility on nexus and other phones needs to be figured out

--- a/FishTagsApp/app/src/main/res/layout/content_main.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_main.xml
@@ -13,22 +13,20 @@
     tools:showIn="@layout/activity_main">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/FormLabelStyle"
         android:text="Submit Tag Recovery"
         android:onClick="goToForm"
         android:id="@+id/button"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:textStyle="bold"
-        android:typeface="serif" />
+        android:background="@color/buttonColor"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/FormLabelStyle"
         android:text="Scoreboard"
+        android:layout_marginTop="49dp"
+        android:background="@color/buttonColor"
         android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
