--- a/FishTagsApp/app/src/main/res/layout/content_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_form.xml
@@ -5,7 +5,6 @@
     android:id="@+id/my_scroll_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/highlighted_text_material_dark"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -18,180 +17,130 @@
     <RelativeLayout
         android:id="@+id/my_rel_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <TextView
-            android:id="@+id/formTitle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:background="@color/seaColor"
-            android:clickable="false"
-            android:text="Fish Tag Submission Form"
-            android:textAlignment="center"
-            android:textColor="@color/whiteColor"
-            android:textSize="30dp"
-            android:textStyle="bold" />
-
-        <TextView
+            style="@style/FormLabelStyle"
             android:id="@+id/Name0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/formTitle"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="48dp"
             android:text="Name"
-            android:textSize="24dp"
-            android:textStyle="bold" />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
 
         <EditText
+            style="@style/FormEntryStyle"
             android:id="@+id/Name"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/Name0"
-            android:layout_below="@+id/formTitle"
             android:layout_marginStart="60dp"
             android:layout_toRightOf="@+id/Name0"
             android:cursorVisible="false"
-            android:text="Han Solo"
-            android:textAlignment="center"
-            android:textSize="20dp" />
+            android:text="Han Solo" />
 
         <TextView
+            style="@style/FormLabelStyle"
             android:id="@+id/CountryID0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignStart="@+id/Name0"
             android:layout_below="@+id/Name0"
-            android:layout_marginTop="15dp"
-            android:text="CountryID"
-            android:textSize="24dp"
-            android:textStyle="bold" />
+            android:text="CountryID" />
 
         <EditText
+            style="@style/FormEntryStyle"
             android:id="@+id/CountryID"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/CountryID0"
             android:layout_alignStart="@+id/Name"
-            android:layout_below="@+id/Name"
-            android:text="" />
+            android:layout_below="@+id/Name" />
 
         <TextView
+            style="@style/FormLabelStyle"
             android:id="@+id/NationalID0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignStart="@+id/CountryID0"
             android:layout_below="@+id/CountryID0"
-            android:layout_marginTop="15dp"
-            android:text="Tag ID"
-            android:textSize="24dp"
-            android:textStyle="bold" />
+            android:text="Tag ID" />
 
         <EditText
+            style="@style/FormEntryStyle"
             android:id="@+id/NationalID"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/NationalID0"
             android:layout_alignStart="@+id/CountryID"
-            android:layout_below="@+id/CountryID"
-            android:text="" />
+            android:layout_below="@+id/CountryID" />
 
         <TextView
+            style="@style/FormLabelStyle"
             android:id="@+id/Time0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignStart="@+id/NationalID0"
             android:layout_below="@+id/NationalID0"
-            android:layout_marginTop="15dp"
             android:text="Time"
-            android:textSize="24dp"
-            android:textStyle="bold" />
+            />
 
         <EditText
+            style="@style/FormEntryStyle"
             android:id="@+id/Time"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/Time0"
             android:layout_alignStart="@+id/NationalID"
             android:layout_below="@+id/NationalID" />
 
         <TextView
+            style="@style/FormLabelStyle"
             android:id="@+id/Location0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignStart="@+id/Time0"
             android:layout_below="@+id/Time0"
-            android:layout_marginTop="15dp"
-            android:text="Location"
-            android:textSize="24dp"
-            android:textStyle="bold" />
+            android:text="Location" />
 
         <EditText
+            style="@style/FormEntryStyle"
             android:id="@+id/Location"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/Location0"
             android:layout_alignStart="@+id/Time"
             android:layout_below="@+id/Time"
-            android:text="41.9981° N, 91.1415° W"
-            android:textSize="16dp" />
+            android:text="41.9981° N, 91.1415° W" />
 
 
         <TextView
+            style="@style/FormLabelStyle"
             android:id="@+id/Notes0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignStart="@+id/Location0"
             android:layout_below="@+id/Location0"
-            android:layout_marginTop="15dp"
-            android:text="Notes"
-            android:textSize="24dp"
-            android:textStyle="bold" />
+            android:text="Notes" />
 
         <EditText
+            style="@style/FormEntryStyle"
             android:id="@+id/Notes"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/Notes0"
             android:layout_alignStart="@+id/Location"
             android:layout_below="@+id/Location"
-            android:hint="gear used, fish hooked removed (y/n), comments"
-            android:textSize="12dp" />
+            android:textColorHint="@color/colorPrimary"
+            android:hint="gear used, fish hooked removed (y/n), comments" />
 
         <TextView
+            style="@style/FormLabelStyle"
             android:id="@+id/FishPhoto0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignStart="@+id/Notes0"
             android:layout_below="@+id/Notes0"
-            android:layout_marginTop="15dp"
-            android:text="Photo"
-            android:textSize="24dp"
-            android:textStyle="bold" />
+            android:text="Photo" />
 
-        <ImageView
-            android:id="@+id/FishPhoto"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignEnd="@+id/Notes"
-            android:layout_alignTop="@+id/PhotoButton"
-            android:src="@drawable/placeholder" />
-
-        <Button
+        <ImageButton
             android:id="@+id/PhotoButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/Notes"
-            android:layout_centerHorizontal="true"
             android:layout_marginRight="15dp"
-            android:background="@color/seaColor"
+            android:background="@color/buttonColor"
+            android:src="@android:drawable/ic_menu_camera"
             android:onClick="goToCamera"
             android:text="Take Photo"
             android:textColor="@color/whiteColor"
             android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_alignBottom="@+id/FishPhoto"
+            android:layout_alignParentEnd="true" />
+
+        <ImageView
+            android:id="@+id/FishPhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/fishy"
+            android:layout_below="@+id/FishPhoto0"
+            android:layout_toStartOf="@+id/PhotoButton" />
 
         <Button
             android:id="@+id/SubmitForm"
@@ -200,7 +149,7 @@
             android:layout_below="@+id/FishPhoto"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
-            android:background="@color/seaColor"
+            android:background="@color/buttonColor"
             android:onClick="submitForm"
             android:text="Submit"
             android:textColor="@color/whiteColor"
