--- a/FishTagsApp/app/src/main/res/values/styles.xml
+++ b/FishTagsApp/app/src/main/res/values/styles.xml
@@ -1,18 +1,42 @@
 <resources>
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
+    <style name="MyFishTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:textColorPrimary">#000000</item>
+        <item name="colorControlNormal">@color/colorPrimary</item>
+        <!--<item name="colorControlActivated">@color/buttonColor</item>-->
+        <!--<item name="colorControlHighlight">@color/backgroundColor</item>-->
+        <!--<item name="actionBarStyle">@style/MyActionBar</item>-->
     </style>
-    
-    <style name="MyActionBar" parent="Widget.AppCompat.Light.ActionBar.Solid">
-        <item name="android:background">@color/seaColor</item>
-        <item name="android:textColor">@color/colorAccent</item>
+
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar.Solid">
+        <item name="background">@color/seaColor</item>
+        <item name="titleTextStyle">@style/MyTitleTextStyle</item>
         <item name="logo">@drawable/whale</item>
         <item name="displayOptions">useLogo|showHome</item>
     </style>
 
+    <style name="MyTitleTextStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/whiteColor</item>
+    </style>
 
+    <style name="FormStyle">
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:typeface">serif</item>
+
+    </style>
+    <style name="FormLabelStyle" parent="FormStyle">
+        <item name="android:layout_alignParentStart">true</item>
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="FormEntryStyle" parent="FormStyle">
+        <item name="android:layout_width">fill_parent</item>
+       <item name="android:cursorVisible">false</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16dp</item>
+    </style>
 </resources>
