Added workflow from submission form to the signup page to verify settings. Used the same activity and added requestCodes and such so that it will display different prompts when needed. I believe we have a bug where non of the JSON data from the form is actually getting submitted, the Toast has an empty map. We need to look into this asap. Also fixed the splash screen to go to the LauncherActivity instead of MainActivity. Took out the Auto-fill button and made it autofill whenever possible

--- a/FishTagsApp/app/src/main/res/layout/content_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_form.xml
@@ -203,7 +203,7 @@
             android:layout_marginTop="15dp"
             android:background="@color/seaColor"
             android:onClick="submitForm"
-            android:text="Submit"
+            android:text="Next"
             android:textColor="@color/whiteColor"
             android:textSize="30dp"
             android:textStyle="bold" />
