--- a/FishTagsApp/app/src/main/res/layout/activity_signup.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_signup.xml
@@ -1,5 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/login_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -8,40 +9,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/login_form"
     tools:context=".Signup.SignupActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/personal_info_layout"/>
+        <include layout="@layout/personal_info_layout" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/signUpBtn"
+            style="?android:textAppearanceSmall"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:weightSum="2">
-
-            <Button
-                android:id="@+id/autoFillBtn"
-                style="?android:textAppearanceSmall"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_weight="1"
-                android:text="@string/action_autofill"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/signUpBtn"
-                style="?android:textAppearanceSmall"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_weight="1"
-                android:text="@string/action_sign_up"
-                android:textStyle="bold" />
-        </LinearLayout>
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:text="@string/action_sign_up"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </ScrollView>
