--- a/FishTagsApp/app/src/main/res/layout/personal_info_layout.xml
+++ b/FishTagsApp/app/src/main/res/layout/personal_info_layout.xml
@@ -13,9 +13,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/gone"
+        android:id="@+id/verifyInfo"
         android:text="Please verify the following information:"
-        android:visibility="visible" />
+        android:visibility="gone" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
