Added in the logo. Will next apply it to the actionbar and incorporate gui. Also will look into making it bigger on startup

--- a/FishTagsApp/app/src/main/res/values/styles.xml
+++ b/FishTagsApp/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
     <style name="MyActionBar" parent="Widget.AppCompat.Light.ActionBar.Solid">
         <item name="android:background">@color/seaColor</item>
         <item name="android:textColor">@color/colorAccent</item>
-        <item name="logo">@drawable/whale</item>
+        <item name="logo">@mipmap/ic_launcher</item>
         <item name="displayOptions">useLogo|showHome</item>
     </style>
 
