Added in the menu and modified the splash logo to be bigger. May have to make it not 30% smaller but more like 20-25o fit most screens

--- a/FishTagsApp/app/src/main/res/layout/content_main.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_main.xml
@@ -17,7 +17,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/welcome"
-        android:text="Welcome to HI TAG!"/>
+        android:text="Welcome!"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="To submit a tag, click the Add button at the bottom right."/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
