Fiddled with padding for sign up activity, still not perfect, but at least the button shows. Added the api key for maps to manifest

--- a/FishTagsApp/app/src/main/res/layout/personal_info_layout.xml
+++ b/FishTagsApp/app/src/main/res/layout/personal_info_layout.xml
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         android:id="@+id/modifyInfo"
         android:text="Update your information:"
-        android:visibility="invisible" />
+        android:visibility="gone" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
