--- a/FishTagsApp/app/src/main/res/layout/activity_signup.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_signup.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".signup.SignupActivity"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    tools:context=".signup.SignupActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -15,7 +14,23 @@
         <include layout="@layout/custom_toolbar" />
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_signup" />
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/login_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:useDefaultMargins="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="bft.fishtagsapp.FormActivity">
+
+        <include layout="@layout/content_signup" />
+
+    </ScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
 
