--- a/FishTagsApp/app/src/main/res/layout/content_signup.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_signup.xml
@@ -1,35 +1,22 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/login_form"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    tools:context="bft.fishtagsapp.MainActivity"
+    tools:showIn="@layout/activity_signup"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:useDefaultMargins="true"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".signup.SignupActivity">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <include layout="@layout/personal_info_layout" />
 
-        <include layout="@layout/personal_info_layout" />
+    <Button
+        android:id="@+id/signUpBtn"
+        style="@style/ButtonTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/action_sign_up" />
 
-        <Button
-            android:id="@+id/signUpBtn"
-            style="@style/ButtonTheme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1"
-            android:text="@string/action_sign_up" />
-
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
