--- a/FishTagsApp/app/src/main/res/layout/activity_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_form.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/form"
     android:fitsSystemWindows="true"
-    tools:context="bft.fishtagsapp.FormActivity">
+    tools:context=".form.FormActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -14,25 +15,20 @@
 
         <include layout="@layout/custom_toolbar" />
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabGravity="fill"
+            app:tabMode="fixed" />
+
+
     </android.support.design.widget.AppBarLayout>
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/my_scroll_view"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:useDefaultMargins="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="bft.fishtagsapp.FormActivity">
-
-        <include layout="@layout/tag_info_layout" />
-
-    </ScrollView>
-
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
