--- a/FishTagsApp/app/src/main/res/layout/content_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_form.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:useDefaultMargins="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="bft.fishtagsapp.FormActivity"
+    tools:context=".form.FormActivity"
     tools:showIn="@layout/activity_form">
 
 
