--- a/FishTagsApp/app/src/main/res/layout/tag_info_layout.xml
+++ b/FishTagsApp/app/src/main/res/layout/tag_info_layout.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/CountryID"
+            android:id="@+id/NationalID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/prompt_tagId"
