--- a/FishTagsApp/app/src/main/res/values/styles.xml
+++ b/FishTagsApp/app/src/main/res/values/styles.xml
@@ -24,5 +24,33 @@
         <item name="android:background">@drawable/rounded_button</item>
     </style>
 
+    <style name="FormProgress">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 
+    <style name="FormProgress.Highlighted" parent="FormProgress">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="FormProgressBar" parent="Base.Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:indeterminate">false</item>
+        <item name="android:max">1</item>
+        <item name="android:progress">0</item>
+    </style>
+
+    <style name="FormProgressBar.Highlighted" parent="FormProgressBar">
+        <item name="android:progress">1</item>
+    </style>
+
+    <style name="DropDownStyle" parent="Base.TextAppearance.AppCompat.Widget.DropDownItem">
+        <item name="android:textSize">40dp</item>
+    </style>
 </resources>
