--- a/FishTagsApp/app/src/main/res/values/styles.xml
+++ b/FishTagsApp/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
-    
+
     <style name="MyActionBar" parent="Widget.AppCompat.Light.ActionBar.Solid">
         <item name="android:background">@color/seaColor</item>
         <item name="android:textColor">@color/colorAccent</item>
@@ -52,5 +52,21 @@
 
     <style name="DropDownStyle" parent="Base.TextAppearance.AppCompat.Widget.DropDownItem">
         <item name="android:textSize">40dp</item>
+    </style>
+
+    <style name="CheckboxStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">35dp</item>
+        <item name="android:textColor">@color/navigationBarColor</item>
+    </style>
+
+    <style name="FormTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">50dp</item>
+        <item name="android:textStyle">bold|italic</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 </resources>
