Made graphics for tag placement and fork length. Updated the button positions by switching to a relative layout. Decided not to have in units as an option and everything in cm. TODO: fix screen flipping bug, make the gps and time update when the form is submitted instead of doing so when the form opens. Also, test with the RFID reader to make sure that the tag id is being autofilled in.

--- a/FishTagsApp/app/src/main/res/layout/activity_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_form.xml
@@ -90,8 +90,10 @@
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="20dp">
         </FrameLayout>
 
     </LinearLayout>
