--- a/FishTagsApp/app/src/main/res/layout/fragment_tag_id.xml
+++ b/FishTagsApp/app/src/main/res/layout/fragment_tag_id.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <!--<android.support.design.widget.TextInputLayout-->
     <!--android:layout_width="match_parent"-->
@@ -12,7 +13,18 @@
 
     <TextView
         style="@style/FormTitle"
-        android:text="Tag ID Number" />
+        android:text="Tag ID Number"
+        android:id="@+id/textView3" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/fish_tagged"
+        android:layout_weight="102.23"
+        android:id="@+id/imageView2"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/NationalID"
@@ -24,17 +36,21 @@
         android:inputType="number"
         android:maxLines="1"
         android:singleLine="true"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_below="@+id/imageView2"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/SubmitID"
         style="@style/ButtonTheme"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
+        android:layout_gravity="right"
+
         android:onClick="submitID"
         android:text="Next"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 
-</LinearLayout>
+</RelativeLayout>
