partially finished documentation

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -218,17 +218,18 @@ em {
 
 table {
   width: 100%;
-  border: 1px solid #ebebeb;
+  border: 1px solid black;
 }
 
 th {
   font-weight: 500;
+  color: black;
 }
 
 td {
   font-weight: 300;
   text-align: center;
-  border: 1px solid #ebebeb;
+  color: black;
 }
 
 form {
