--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -109,7 +109,7 @@ ul, ol, dl {
 
 table {
   width: 100%;
-  border: 1px solid #ebebeb;
+  border: 1px solid black;
 }
 
 th {
@@ -119,7 +119,7 @@ th {
 td {
   font-weight: 300;
   text-align: center;
-  border: 1px solid #ebebeb;
+  border: 1px solid black;
 }
 
 form {
